Add profile #334 (#344)